<resources>
    <string name="app_name">OpenSMSForwarder</string>
    <string name="enter_recipient_phone_hint">Recipient phone</string>
    <string name="enter_recipient_email">Recipient e-mail</string>
    <string name="start_new_forwarding">Start New Forwarding</string>
    <string name="empty_recipients">Empty</string>
    <string name="empty_rules">You need to add at least one rule</string>
    <string name="enter_text_rule_pattern">Enter text rule</string>
    <string name="permissions_rationale_title">Why do you need to grant permissions?</string>
    <string name="permissions_rationale_message">SMS and notification permissions are needed to read SMS and to show daily notification with forwarded messages count.</string>
    <string name="permission_description_permanently">Some of permissions are permanently denied. To use full app functionality Go to Settings and enable permissions manually.</string>
    <string name="empty" />
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="submit">Submit</string>
    <string name="back">Back</string>
    <string name="add_rule_error">Pattern is already in the list</string>
    <string name="blank_rule_error">Pattern can\'t be blank</string>
    <string name="go_to_settings"><u>Go to Settings</u></string>
    <string name="item_recipient_title">Title:</string>
    <string name="item_recipient_fwd_type">Forwarding type:</string>
    <string name="item_recipient_phone">Recipient phone:</string>
    <string name="item_recipient_email">Recipient email:</string>
    <string name="steps_are_not_completed_error">Forwarding is disabled.\nPlease check if all setup steps were completed</string>
    <string name="sms_forward_email_error">Forwarding is disabled.\nPlease relogin</string>
    <string name="sms_forward_phone_error">Forwarding is disabled.\nPlease check recipient phone number</string>
    <string name="your_forwardings">Your forwardings</string>
    <string name="step_1_from_3">Forwarding step 1 of 3</string>
    <string name="step_2_from_3">Forwarding step 2 of 3</string>
    <string name="step_3_from_3">Forwarding step 3 of 3</string>
    <string name="forwarding">Forwarding</string>
    <string name="forwarding_named">Forwarding %s</string>
    <string name="forwarding_title">Forwarding Title</string>
    <string name="add_recipient">Add recipient</string>
    <string name="add_forwarding_rule">Add forwarding rules</string>
    <string name="sms">SMS</string>
    <string name="telegram">Telegram</string>
    <string name="telegram_api_token">Telegram Api Token</string>
    <string name="telegram_chat_id">Telegram Chat Id</string>
    <string name="google_chat">Google Chat</string>
    <string name="google_chat_web_hook">Google Chat Web Hook</string>
    <string name="enter_google_chat_web_hook_hint">Enter Google chat web hook</string>
    <string name="google_chat_web_hook_tooltip">WebHook is needed to forward messages to Google Chat</string>
    <string name="enter_telegram_api_token_hint">Enter Telegram Api Token</string>
    <string name="enter_telegram_chat_id_hint">Enter Telegram Chat Id</string>
    <string name="sms_warning">Warning! The mobile operator will charge a fee for sending each SMS.</string>
    <string name="email">Email</string>
    <string name="next">Next</string>
    <string name="error">Error</string>
    <string name="forwarding_title_hint">Enter forwarding title</string>
    <string name="remove_recipient_confirmation_title">You are about to remove item</string>
    <string name="remove_recipient_confirmation_message">Do you want to continue?</string>
    <string name="enter_phone_number_hint">Enter phone number</string>
    <string name="enter_email_hint">Enter recipient email</string>
    <string name="finish">Finish</string>
    <string name="required">Required *</string>
    <string name="error_phone_number_is_not_valid">Phone number is not valid</string>
    <string name="error_email_is_not_valid">Email is not valid</string>
    <string name="error_email_is_blank">Email can not be blank</string>
    <string name="error_generic_is_blank">Field can not be blank</string>
    <string name="error_google_chat_web_hook_is_not_valid">Google Chat Web Hook is not valid</string>
    <string name="error_google_sign_in">There was an error while trying to sign in</string>
    <string name="google_sign_in_canceled">Sign in was canceled</string>
    <string name="error_google_sign_out">Unable to sign out from account</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_to_email">Sign in to your gmail account to be able to forward messages on your behalf*</string>
    <string name="signed_in_as">You are signed in as:\n%s</string>
    <string name="sig_out">Sign out</string>
    <string name="no_forwarding_method_title">Forwarding method</string>
    <string name="please_select_forwarding_method_message">Please, select forwarding method</string>
    <string name="forwarding_method">Choose forwarding method*</string>
    <string name="rule">Rule</string>
    <string name="rule_named">Rule %s</string>
    <string name="edit_rule_named">Edit rule %s</string>
    <string name="delete_rule_named">Delete rule %s</string>
    <string name="dialog_delete_rule_title">Delete rule</string>
    <string name="dialog_delete_rule_message">The rule \"%s\" will be deleted.</string>
    <string name="dialog_edit_rule_title">Change rule</string>
    <string name="dialog_edit_rule_message">The rule \"%s\" will be changed to</string>
    <string name="forwarding_sms">Forwarding SMS…</string>
    <string name="remove_title">You are about to remove item</string>
    <string name="remove_message">Do you want to continue?</string>
    <string name="add_rule_message">Rule is the text that the message should contain</string>
    <string name="add_rule_button">Add Rule</string>
    <string name="remove_button">Remove</string>
    <string name="delete_title">You are about to remove item</string>
    <string name="delete_message">The rule \"%s\" will be deleted.</string>
    <string name="delete">Delete</string>
    <string name="delete_forwarding">Delete forwarding</string>
    <string name="delete_forwarding_named">Delete forwarding %s</string>
    <string name="edit_forwarding">Edit forwarding</string>
    <string name="edit_forwarding_named">Edit forwarding %s</string>
    <string name="edit_rule_message">The rule \"%s\" will be changed to</string>
    <string name="edit_rule_title">Change rule</string>
    <string name="add_recipient_email">Recipient email*</string>
    <string name="add_recipient_phone">Recipient phone Number*</string>
    <string name="battery_save_warning_button">Warning: app can be stopped by your device\'s power settings.</string>
    <string name="battery_save_warning_title">Make app an exemptions from Power Management</string>
    <string name="battery_save_warning_message">In order for app to work when device is not active for a long time,\nplease, make it an exemption from Power Management features</string>
    <string name="onboarding_title_content_description">How to use the app, %s</string>
    <string name="onboarding_fragment_finish">Finish</string>
    <string name="onboarding_fragment_next">Next</string>
    <string name="onboarding_skip_all">Skip all</string>
    <string name="onboarding_step_label">Step %1$d</string>
    <string name="onboarding_step_1_heading">Welcome to\nOpen SMS Forwarder!</string>
    <string name="onboarding_step_1_description">Thank you for choosing Open SMS Forwarder.\nWe’ll guide you through the app in a few simple steps.</string>
    <string name="onboarding_step_2_heading">Choose forwarding method</string>
    <string name="onboarding_step_2_description">Select what type of forwarding you prefer to use.</string>
    <string name="onboarding_step_3_heading">Provide recipient details</string>
    <string name="onboarding_step_3_description">Specify the recipient details.\nFor example, if you choose \'Email\' as forwarding type, you need to:\n1. Login to a Google account to forward messages on your behalf.\n2. Fill recipient email.\n\nFor other types just follow the hints on the screen.</string>
    <string name="onboarding_step_4_heading">Add forwarding rules</string>
    <string name="onboarding_step_4_description">1. Enter the keyword that an SMS must contain to be eligible for forwarding.\n2. Submit it with \'Add Rule\' button.\n3. Click \'Finish\'.\n\nForwarding setup is complete!</string>
    <string name="privacy_info_heading">Privacy info</string>
    <string name="privacy_info_description">Be cautious — scammers may trick you into sharing details to intercept your SMS. This app is not distributed by banks or public organizations and is for personal use only. Download it exclusively from Google Play.</string>
    <string name="risk_agreement_text">I acknowledge the potential risks and agree to proceed</string>
    <string name="acknowledge_risks_message">Please confirm that you acknowledge the potential risks.</string>
    <string name="forwarding_is_disabled_some_problem_with_internet_connection">Forwarding is disabled.\nSome problem with internet connection</string>
    <string name="forwarding_is_disabled_recipient_is_not_found">Forwarding is disabled.\nRecipient is not found.</string>
    <string name="error_the_server_could_not_be_reached">Error.\nThe server could not be reached.</string>
    <string name="error_the_request_timed_out">Error.\nThe request timed out.</string>
    <string name="forwarding_is_disabled_an_unknown_error_occurred">Forwarding is disabled.\nAn unknown error occurred.</string>
    <string name="forwarding_is_disabled_radio_is_off">Forwarding is disabled.\nRadio is off</string>
    <string name="forwarding_is_disabled_null_pdu">Forwarding is disabled.\nNull PDU</string>
    <string name="forwarding_is_disabled_no_service_available">Forwarding is disabled.\nNo Service Available</string>
    <string name="forwarding_is_disabled_generic_failure_error">Forwarding is disabled.\nGeneric Failure Error</string>
    <string name="forwarded_messages">Forwarded messages</string>
    <string name="forwarded_messages_count">%1$s messages were forwarded in the last 24 hours</string>
    <string name="forwarding_history_item_date_content_description">Forwarded message number %s\nDate:</string>
    <string name="forwarding_history_item_date">Date:</string>
    <string name="forwarding_history_item_status">Status</string>
    <string name="forwarding_history_item_message">Message:</string>
    <string name="forwarding_history_item_status_success">Success</string>
    <string name="forwarding_history_item_status_fail">Fail</string>
    <string name="forwarding_history_title">Forwarding history</string>
    <string name="forwarding_history_retrying">Retrying…</string>
    <string name="forwarding_history_empty">There is no forwarded messages yet</string>
    <string name="feedback_heading">Feedback</string>
    <string name="feedback_description">Fill out the form and we will be in touch</string>
    <string name="feedback_email">Contact e-mail</string>
    <string name="feedback_body">How can we help you?</string>
    <string name="feedback_letter_subject">Feedback from %s</string>
    <string name="feedback_success">Feedback successfully sent!</string>
    <string name="feedback_failure">Something went wrong while sending feedback.</string>
    <string name="telegram_api_token_info">Telegram api token info</string>
    <string name="telegram_chat_id_info">Telegram chat id info</string>
</resources>