<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/CustomDialogStroke"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/title_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/SmsTextAppearance.Bold.16"
            tools:text="@string/edit_rule_title" />

        <TextView
            android:id="@+id/message_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textAppearance="@style/SmsTextAppearance.Regular.14.OnSurfaceVariant"
            tools:text="@string/edit_rule_message" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layourEditRule"
            style="@style/SmsEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editRule"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_text_rule_pattern"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:textAppearance="@style/SmsTextAppearance.Regular.16" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/positive_btn"
            style="@style/SmsMaterialButton"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="8dp"
            tools:text="@string/save" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/negative_btn"
            style="@style/SmsCancelMaterialButton"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="16dp"
            tools:text="@string/cancel" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</com.google.android.material.card.MaterialCardView>
