<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    android:background="@drawable/image_button_background"
    android:orientation="horizontal"
    android:paddingVertical="16dp"
    android:paddingStart="24dp"
    android:paddingEnd="16dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:accessibilityTraversalBefore="@id/date"
            android:text="@string/forwarding_history_item_date"
            android:textAppearance="@style/SmsTextAppearance.Medium.12.Subsidiary" />

        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:accessibilityTraversalBefore="@id/message_label"
            android:textAppearance="@style/SmsTextAppearance.Medium.12"
            tools:text="28.01.2025" />

        <TextView
            android:id="@+id/message_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:accessibilityTraversalBefore="@id/message"
            android:text="@string/forwarding_history_item_message"
            android:textAppearance="@style/SmsTextAppearance.Medium.12.Subsidiary" />

        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textAppearance="@style/SmsTextAppearance.Medium.12"
            tools:text="@tools:sample/lorem" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/status_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:accessibilityTraversalBefore="@id/status"
            android:text="@string/forwarding_history_item_status"
            android:textAppearance="@style/SmsTextAppearance.Medium.12.Subsidiary" />

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textAppearance="@style/SmsTextAppearance.Medium.12"
            tools:text="@string/forwarding_history_item_status_success"
            tools:textColor="@color/green" />
    </LinearLayout>
</LinearLayout>
